# bbgl

./: .gitmodules  CMakeLists.txt  README.md  tags
lib/imgui_gl3/: imgui_impl_glfw_gl3.h
src/: App.c  App.h  Drawable.c  Drawable.h  Gui.c  Gui.h  Resources.c  Resources.h  Scene.c  Scene.h  Shader.c  Shader.h  Shape.c  Shape.h  bbgl.c  bbgl.h  gui.c  gui.h  main.c  obj.c  obj.h  scene.c  scene.h  shader.c  shader.h  tags
